--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-header></app-header>
 <div style="text-align:center">
   <h1>
     Welcome to {{ title }}!
@@ -16,5 +17,10 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
+  <li>
+      <h2><a routerLink='/products'>Products List</a></h2>
+    </li>
 </ul>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
 
